# pythonProjectCourseOOP

./: .gitignore  main.py  pyproject.toml
data/: job_hh.json
src/: abc_class.py  file_handler_class.py  hh_class.py  manager_class.py  user_function.py  vacancies_class.py
test/: conftest.py  test_file_handler_class.py  test_hh_class.py  test_user_function.py  test_vacancies_class.py
test/data/: job_hh.json  test.json
