[tool.poetry]
name = "pythonprojectcourseoop"
version = "0.1.0"
description = ""
authors = ["Viktory <vika.scheglowa@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.0"
requests = "^2.32.3"
pandas = "^2.2.3"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
